# naive-rag

./: .gitignore  README.md  main.py  pyproject.toml  todo.md
data/: chunks.example
modules/: chunks.py  embedding.py  llm_gemini.py  llm_ollama.py  retrieve.py  scrape.py
rag/: chunks.py  llm_gemini.py  llm_ollama.py  retrieve.py  scrape.py
